fix modal overflow

--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -11,6 +11,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background: rgba(28, 24, 47, 0.3);
     display: flex;
   }
@@ -19,12 +20,15 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     margin: auto;
     background-color: $white;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.25);
     padding: 20px;
     padding-top: 50px;
     padding-bottom: 55px;
+    overflow: auto;
+    max-height: 100vh;
   }
 
   &__close {
